[package]
name = "hyper-proxy-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
anyhow = "1.0"
toml = "0.9.11+spec-1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.56", features = ["derive"] }